# STM32H7

./: CMakeLists.txt  main.cc
core/linker/: STM32H743ZITx_FLASH.ld
core/startup/: startup_stm32h743xx.s
driver/bsp/: digitalout.h
driver/hal/: stm32h7xx_hal_conf.h
middleware/freertos/include/: FreeRTOSConfig.h
middleware/trace/config/: SEGGER_SYSVIEW_Conf.h
middleware/trace/rtos/: SEGGER_SYSVIEW_Config_uCOSIII.c
middleware/ucos/config/: lib_cfg.h  os_cfg.h
middleware/ucos/core/port/: os_cpu_c.c
user/: stm32h7xx_it.c
